@@ -1,3 +1,9 @@
+2013-06-30 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/SDCClospre.hpp,
+	  src/SDCClospre.cc:
+	  Preparations for better handling of register-pressure in lospre.
+
 2013-06-29 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/SDCCBBlock.c,
@@ -5,12 +11,12 @@
 	  src/SDCClospre.hpp:
 	  Preparations for better handling of register-pressure in lospre.
 
-2013-06-28 Philipp Klaus Krause <pkk AT spth.de>
+2013-06-28 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
 
 	* src/SDCClospre.cc:
 	  Disable safety in division for stm8.
 
-2013-06-27 Philipp Klaus Krause <pkk AT spth.de>
+2013-06-27 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
 
 	* src/SDCCnaddr.hpp:
 	  Add comment to reference the paper on bank selection.
